# red2400-replication-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: 01_basic_audit.py
paper/: paper.bib  paper.md
red2400_toolkit/: __init__.py  audit_runner.py  early_death_validator.py  figure_generator.py  prfs_classifier.py  red2400_loader.py
scripts/: generate_expected_outputs.py
tests/: conftest.py  expected_outputs.json  test_audit_runner.py  test_classifier.py  test_early_death.py  test_figures.py  test_loader.py
